--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/visual-page/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script type="module" crossorigin src="/visual-page/assets/index.08a2c969.js"></script>
+    <link rel="stylesheet" href="/visual-page/assets/index.c2ec2cdb.css">
   </head>
   <body>
     <div id="root" class="w-full h-full"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
